--- a/src/components/shared/Header.css
+++ b/src/components/shared/Header.css
@@ -53,14 +53,14 @@
 } */
 
 .menu-horizontal li:last-child {
-  margin-left: auto;
+  margin-right: auto;
 }
 
 .menu a {
   text-decoration: none;
-  color: inherit;
+  font-weight: 500;
 }
 
 .menu a:hover {
-  color: #ddd;
+  color: #e6aa3b;
 }
