--- a/src/components/shared/Header.css
+++ b/src/components/shared/Header.css
@@ -13,7 +13,7 @@
   position: relative;
   width: 100%;
   color: #fff;
-  transition: all 0.3s ease;
+  transition: all 0.3s;
 }
 
 .sticky {
@@ -27,6 +27,7 @@
 
 .dropdown {
   position: relative;
+  transition: all 0.3s;
 }
 
 .dropdown-content {
@@ -35,25 +36,22 @@
   left: 0;
   display: none;
   flex-direction: column;
+  transition: all 0.3s;
 }
 
 .dropdown-content.block {
   display: flex;
 }
 
-.menu {
+.ul {
   list-style: none;
-  padding: 0;
-  margin: 0;
   display: flex;
+  /* align-items: center;
+  justify-content: space-between; */
 }
 
-/* .menu-horizontal li {
-  margin-right: 1rem;
-} */
-
 .menu-horizontal li:last-child {
-  margin-right: auto;
+  margin-left: auto;
 }
 
 .menu a {
