--- a/src/index.css
+++ b/src/index.css
@@ -2,13 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  overflow-x: hidden;
 }
 
-code {
+html,
+body {
   font-family: "Rubik", sans-serif;
 }
